--- a/projects.html
+++ b/projects.html
@@ -20,288 +20,7 @@
     </head>
 
 <body> 
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="resume.html">Resume</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <section class="section-about">
-        <h2>Portfolio</h2>
-        <hr><br>
-        <div class="spacer"></div>
-        <h4>Professional (2021 - present):</h4>
-        <div class="container-fluid row padding">
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <a href="https://vahlthwf.connectedcommunity.org/home">
-                            <img class="card-img-top embed-responsive-item" src="images/PRSS.png"></a>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">GMU Center for Health Workforce 2</h4>
-                        <p class="card-text">Made with Higher Logic</p>
-                        <a href="https://vahlthwf.connectedcommunity.org/home" class="btn-btn-outline-secondary">Project</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <a href="https://vahlthwf.gmu.edu/">
-                            <img class="card-img-top embed-responsive-item" src="images/PRSS.png"></a>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">GMU Center for Health Workforce 1</h4>
-                        <p class="card-text">Made with WordPress</p>
-                        <a href="https://vahlthwf.gmu.edu/" class="btn-btn-outline-secondary">Project</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <a href="https://prss.gmu.edu/">
-                            <img class="card-img-top embed-responsive-item" src="images/PRSS.png"></a>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">GMU PRSS</h4>
-                        <p class="card-text">Made with WordPress</p>
-                        <a href="https://prss.gmu.edu/" class="btn-btn-outline-secondary">Project</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <a href="https://claudemoorescholars.org/">
-                            <img class="card-img-top embed-responsive-item" src="images/CMS.png"></a>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">CMS Community</h4>
-                        <p class="card-text">Made with Moodle</p>
-                        <a href="https://claudemoorescholars.org/" class="btn-btn-outline-secondary">Project</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <a href="https://claudemoorescholars.gmu.edu/">
-                            <img class="card-img-top embed-responsive-item" src="images/CMS-WP.png"></a>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">CMS GMU</h4>
-                        <p class="card-text">Made with WordPress</p>
-                        <a href="https://claudemoorescholars.gmu.edu/" class="btn-btn-outline-secondary">Project</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br>
-        <h4>Professional (2020):</h4>
-        <div class="container-fluid row padding">
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <a href="https://alisagordeeva1.wixsite.com/ipikre">
-                            <img class="card-img-top embed-responsive-item" src="images/company-website-ipikre.PNG"></a>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">IPIKRE Company Website</h4>
-                        <p class="card-text">Made with Wix</p>
-                        <a href="https://alisagordeeva1.wixsite.com/ipikre" class="btn-btn-outline-secondary">Project</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br>
-        <h4>Personal Projects - Web Applications and Sites:</h4>
-        <p>  Note: the project links will be getting updated soon due to the technical issues on their previous hosting platform (as of 09/09/24).</p>
-        <div class="container-fluid row padding">
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <a href="https://ari-abr.github.io/astro-api-app1/">
-                            <img class="card-img-top embed-responsive-item" src="images/AstronomyApp.png"></a>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Astronomy API App</h4>
-                        <p class="card-text">Retrieves data from an API call and displays it in an interactive table,
-                            allows data searching, sorting, downloading, and formatting. Made with HTML, CSS,
-                            JavaScript, and React.js.</p>
-                        <a href="https://ari-abr.github.io/astro-api-app1/"
-                            class="btn-btn-outline-secondary">Project</a>
-                        <br>
-                        <a href="https://github.com/ari-abr/astro-api-app1" class="btn-btn-outline-secondary">GitHub</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <a href="https://serene-badlands-49462.herokuapp.com/">
-                            <img class="card-img-top embed-responsive-item" src="./images/ImageRecognitionApp.jpg"></a>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Image Recognition App</h4>
-                        <p class="card-text">A web app that outputs concepts found in an image, allows user registration
-                            and user data storage. It's connected to a server and user database. Made with HTML, CSS,
-                            JavaScript, PreSQL, and React.js.</p>
-                        <a href="https://serene-badlands-49462.herokuapp.com/" class="btn-btn-outline-secondary">Project
-                            </a>
-                        <br>
-                        <a href="https://github.com/ari-abr/image-recognition" class="btn-btn-outline-secondary">GitHub
-                            </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <a href="./images/BudgetApp.jpg"><img class="card-img-top embed-responsive-item"
-                                src="https://github.com/ari-abr/website-images/blob/main/project3.jpg?raw=true"></a>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Budgeting App</h4>
-                        <p class="card-text">A website that allows the user to submit forms and performs actions with
-                            user input. Made with HTML, CSS, JavaScript, and Bootstrap.</p>
-                        <a href="https://ari-abr.github.io/Budget-Calculator/" class="btn-btn-outline-secondary">Project
-                            </a>
-                        <br>
-                        <a href="https://github.com/ari-abr/Budget-Calculator">GitHub</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <a href="https://recipe-land-app.herokuapp.com/">
-                            <img class="card-img-top embed-responsive-item" src="images/RecipeApp.jpg"></a>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Recipe App</h4>
-                        <p class="card-text">A web app that allows the user to browse through a database. It's connected
-                            to a user database, allows user registration, and stores data. Made with HTML, CSS,
-                            JavaScript, Bootstrap, Webpack, and Firebase.</p>
-                        <a href="https://recipe-land-app.herokuapp.com/" class="btn-btn-outline-secondary">Project
-                            </a>
-                        <br>
-                        <a href="https://github.com/ari-abr/Recipe-App" class="btn-btn-outline-secondary">GitHub
-                            </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <a href="https://ari-abr.github.io/SampleCompanyWebsite2/">
-                            <img class="card-img-top embed-responsive-item"
-                                src="images/sample-company-website2.PNG"></a>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Sample Company Website</h4>
-                        <p class="card-text">A modern website made with Bootstrap that can be used a template for
-                            company websites.</p>
-                        <a href="https://ari-abr.github.io/SampleCompanyWebsite2/"
-                            class="btn-btn-outline-secondary">Project </a>
-                        <br>
-                        <a href="https://github.com/ari-abr/SampleCompanyWebsite2"
-                            class="btn-btn-outline-secondary">GitHub </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <a href="https://mabramovaa01.wixsite.com/mysite">
-                            <img class="card-img-top embed-responsive-item"
-                                src="images/sample-company-website3.PNG"></a>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Wix Company Website</h4>
-                        <p class="card-text">A sample company website made with Wix.</p>
-                        <a href="https://mabramovaa01.wixsite.com/mysite" class="btn-btn-outline-secondary">Project
-                            </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-
-        </div>
-        <div class="spacer"></div>
-        <h4>Other Projects:</h4>
-        <div class="container-fluid row padding">
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <a href="https://play.google.com/store/apps/details?id=app.compactcalculus&hl=en_US">
-                            <img class="card-img-top embed-responsive-item" src="images/AndroidApp.jpg"></a>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">(Android App) Compact Calculus</h4>
-                        <p class="card-text">An android app allowing the user to click and view basic calculus topics.
-                            Made with Java, Kotlin, and XML in Android Studio.</p>
-                        <a href="https://play.google.com/store/apps/details?id=app.compactcalculus&hl=en_US"
-                            class="btn-btn-outline-secondary">Project </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <a href="https://gadig.itch.io/attack-of-the-magic-cardboard">
-                            <img class="card-img-top embed-responsive-item" src="https://img.itch.zone/aW1nLzU5Njg4OTQucG5n/original/y1j2GL.png"></a>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">(Video Game) Attack of the Magic Cardboard</h4>
-                        <p class="card-text">Video game made with C# and Unity, worked in a developer team using GitLab.</p>
-                        <a href="https://gadig.itch.io/attack-of-the-magic-cardboard"
-                            class="btn-btn-outline-secondary">Project </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-    <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="script.js"></script>
+        <h1> New portfolio website: <a href="https://ruslanscode.wordpress.com/">https://ruslanscode.wordpress.com/</a></h1>
 </body>
 
 </html>
